--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
   <string name="app_name">shReddit</string>
+    <string name="list_item_image">list item image</string>
+  <string name="ups_icon">ups icon</string>
+  <string name="comments_icon">comments icon</string>
 </resources>
